--- a/app/src/main/res/layout/activity_join_form.xml
+++ b/app/src/main/res/layout/activity_join_form.xml
@@ -46,14 +46,6 @@
         android:layout_alignRight="@+id/textView5"
         android:layout_alignEnd="@+id/textView5" />
 
-    <Button
-        android:text="정보 가져오기"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/button_getInfo" />
-
     <TextView
         android:text="전화번호 : "
         android:layout_width="wrap_content"
@@ -126,12 +118,60 @@
         android:layout_alignStart="@+id/textView_coodiX" />
 
     <Button
-        android:text="범위검색"
+        android:text="범위검색(DB)"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/button_rangeform"
         android:layout_below="@+id/button_getInfo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
-        android:id="@+id/button_rangeform" />
+        android:layout_marginTop="22dp" />
+
+    <Button
+        android:text="JSON List 가져오기(DB)"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:id="@+id/button_json"
+        android:layout_below="@+id/button_rangeform"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="정보 가져오기(DAUM_API)"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_getInfo"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="주소검색(서버)"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_address"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="광주광역시 남구 월산동"
+        android:ems="10"
+        android:id="@+id/editText"
+        android:layout_below="@+id/button_json"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/textView4"
+        android:layout_toEndOf="@+id/textView4" />
+
+    <TextView
+        android:text="주소 : "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:layout_alignBaseline="@+id/editText"
+        android:layout_alignBottom="@+id/editText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
